# doc-web

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  driver.py  pyproject.toml  requirements.txt  schemas.py  settings.example.yaml  validate_artifact.py
benchmarks/: .gitignore  README.md
doc_web/: __main__.py  cli.py  env.py  install_with_age_gate.py  preview.py  preview_bundle.py  preview_content_hint.py  preview_docx.py  preview_identity.py  preview_images.py  preview_pdf.py  preview_support.py  runtime_contract.py
docling_plugins/: __init__.py  onward_layout_plugin.py  onward_table_structure_plugin.py
docs/: RUNBOOK.md  ai-learning-log.md  build-map.md  doc-web-bundle-contract.md  document-ir.md  dossier-doc-web-handoff.md  format-registry.md  ideal.md  inbox.md  methodology-artifact-audit-and-migration.md  methodology-ideal-spec-compromise.md  ocr-bench.html  pipeline-visibility.html  requirements.md  scout.md  setup-checklist.md  spec.md  stories.md
modules/: module_catalog.yaml
prompts/: ocr_line_reconcile.md
scripts/: discover-models.py  discover-models.ts  install_with_age_gate.py  measure_provenance.py  methodology_graph.py  npm_supply_chain_scan.py  quick_ocr_target_test.py  run_driver_monitored.sh  run_with_doc_web_env.py  sync-agent-skills.sh  triage_facts.py
testdata/: README.md  born-digital-handbook-mini.md  docx-mini.docx  docx-mini.source.json  docx-nested-mini.docx  docx-nested-mini.source.json  docx-page-break.docx  docx-page-break.source.json  docx-sections-mini.docx  docx-sections-mini.source.json  docx-structured.docx  docx-structured.source.json  email-eml-mini.source.json  email-mbox-mini.mbox  email-mbox-mini.source.json  epub-mini.epub  epub-mini.md  epub-mini.source.json  flat-born-digital-form-mini.md  flat-born-digital-mini.md  generate_book_like_born_digital_fixture.py  generate_docx_fixture.py  generate_epub_fixture.py  generate_flat_born_digital_fixture.py  generate_handwritten_notes_fixture.py  generate_mixed_text_image_pdf_fixture.py  generate_pptx_fixture.py  generate_scanned_prose_fixture.py  generate_xlsx_fixture.py  handwritten-notes-alverson-real.txt  handwritten-notes-barney-real.txt  handwritten-notes-faded.txt  handwritten-notes-mini.txt  handwritten-notes-rough.txt  mixed-archive-images-mini.source.json  (+18 more)
(+815 files in other folders)
