[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-web"
dynamic = ["version"]
description = "Pinned contract and bundle preflight surface for Dossier-facing doc-web bundles."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.9,<3",
]

[project.scripts]
doc-web = "doc_web.cli:main"

[project.entry-points.docling]
onward_layout_v1 = "docling_plugins.onward_layout_plugin"
onward_table_structure_v1 = "docling_plugins.onward_table_structure_plugin"

[tool.setuptools]
packages = ["doc_web", "docling_plugins"]
py-modules = ["schemas"]

[tool.setuptools.dynamic]
version = { attr = "doc_web.__version__" }
